--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "8080:8080"
     networks:
       - ft_transcendence
-    env_file: .env
+    #env_file: .env
 
   frontend:
     build: requirements/frontend
@@ -23,5 +23,4 @@ services:
       - "3000:3000"
     networks:
       - ft_transcendence
-    env_file:
-      - .env
+    #env_file: .env
