--- a/srcs/requirements/backend/Dockerfile
+++ b/srcs/requirements/backend/Dockerfile
@@ -3,10 +3,9 @@ FROM node:18
 WORKDIR /app
 
 COPY ["package.json", "package-lock.json", "./"]
+COPY ./ ./
 
-RUN npm install --production
-
-COPY . .
+RUN npm install
 
 EXPOSE 3000
 
