--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -5,22 +5,22 @@ networks:
     driver: bridge
 
 services:
-  nginx:
-    build: requirements/nginx
-    container_name: nginx
-    restart: always
-    ports:
-      - "8080:8080"
-    networks:
-      - ft_transcendence
-    #env_file: .env
-
   frontend:
     build: requirements/frontend
     container_name: frontend
     restart: always
     ports:
-      - "3000:3000"
+      - "8080:8080"
     networks:
       - ft_transcendence
-    #env_file: .env
+    hostname: frontend
+  
+  backend:
+    build: requirements/backend
+    container_name: backend
+    restart: always
+    ports:
+      - "5000:5000"
+    networks:
+      - ft_transcendence
+    hostname: backend
