--- a/srcs/requirements/backend/package.json
+++ b/srcs/requirements/backend/package.json
@@ -28,8 +28,11 @@
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.3",
+    "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.4.0",
+    "@nestjs/websockets": "^9.4.0",
     "@prisma/client": "^4.12.0",
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
