--- a/srcs/requirements/frontend/package.json
+++ b/srcs/requirements/frontend/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^16.18.18",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "cors": "^2.8.5",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
     "victory": "^36.6.8",
