--- a/srcs/requirements/backend/package.json
+++ b/srcs/requirements/backend/package.json
@@ -41,7 +41,8 @@
     "passport-jwt": "^4.0.1",
     "react-router-dom": "^6.10.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -59,7 +60,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
-    "prisma": "^4.13.0",
+    "prisma": "^4.14.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
