--- a/srcs/requirements/frontend/package.json
+++ b/srcs/requirements/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.18",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "js-cookie": "^3.0.5",
     "json-server": "^0.17.3",
