--- a/srcs/requirements/backend/package.json
+++ b/srcs/requirements/backend/package.json
@@ -33,8 +33,10 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.4.0",
+    "@nestjs/schedule": "^2.2.2",
     "@nestjs/websockets": "^9.4.0",
     "@prisma/client": "^4.12.0",
+    "@types/socket.io-client": "^3.0.0",
     "argon2": "^0.30.3",
     "axios": "^1.3.6",
     "class-transformer": "^0.5.1",
@@ -47,7 +49,8 @@
     "react-router-dom": "^6.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
