--- a/srcs/requirements/frontend/package.json
+++ b/srcs/requirements/frontend/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.5",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
+    "react-auth-code-input": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.10.0",
