--- a/srcs/requirements/frontend/package.json
+++ b/srcs/requirements/frontend/package.json
@@ -15,6 +15,7 @@
     "js-cookie": "^3.0.5",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
+    "react-cssfx-loading": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
