--- a/srcs/requirements/frontend/package.json
+++ b/srcs/requirements/frontend/package.json
@@ -9,12 +9,14 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.18",
     "@types/react": "^18.0.28",
+    "@types/react-avatar-editor": "^13.0.0",
     "@types/react-dom": "^18.0.11",
     "cors": "^2.8.5",
     "js-cookie": "^3.0.5",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-auth-code-input": "^3.2.1",
+    "react-avatar-editor": "^13.0.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.10.0",
