--- a/srcs/requirements/backend/package.json
+++ b/srcs/requirements/backend/package.json
@@ -43,6 +43,7 @@
     "class-validator": "^0.14.0",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
+    "lodash": "^4.17.21",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
@@ -59,6 +60,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
+    "@types/lodash": "^4.14.195",
     "@types/node": "18.11.18",
     "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
