--- a/srcs/requirements/frontend/package.json
+++ b/srcs/requirements/frontend/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
+    "@types/lodash": "^4.14.195",
     "@types/styled-components": "^5.1.26"
   }
 }
